Openapi example with enum (#187)
* chore: DefineEnum()

* chore: add enum definition

* chore: gen code

* fix: typo

* chore: add seed

* chore: go run seed.go

* chore: define enum with seed
