# _examples/13openapi/handler/ListArticle.go
@@ -5,6 +5,7 @@ package handler
 import (
 	"context"
 	"m/13openapi/design"
+	"m/13openapi/design/enum"
 	"m/13openapi/handler/runtime"
 	"net/http"
 )
@@ -27,12 +28,13 @@ func ListArticle(getProvider func(*http.Request) (*http.Request, Provider, error
 			}
 		}
 		var queryParams struct {
-			limit *int `query:"limit"`
+			limit *int            `query:"limit"`
+			sort  *enum.SortOrder `query:"sort"`
 		}
 		if err := runtime.BindQuery(&queryParams, req); err != nil {
 			_ = err // ignored
 		}
-		result, err := design.ListArticle(ctx, db, queryParams.limit)
+		result, err := design.ListArticle(ctx, db, queryParams.limit, queryParams.sort)
 		runtime.HandleResult(w, req, result, err)
 	}
 }
